<resources>
    <string name="app_name">K\'merDélices</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favoris</string>
    <string name="search_your_recipes">Recherche </string>
    <string name="meal_categories">Catégories</string>
    <string name="category">Catégorie</string>
    <string name="country">Region</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="app_nam">kmerdelices</string>
    <string name="cmd">Commander</string>
    <string name="res">Reserver</string>

    <string name="google_connexion">Se connecter avec Google</string>
    <string name="email_connexion">Se connecter avec son email</string>
    <string name="facebook_connexion">Se connecter avec Facebook</string>


    <string name="facebook_app_id">627400858014419</string>
    <string name="fb_login_protocol_scheme">fb627400858014419</string>

    <string name="txtLogin">En cliquant sur connexion, vous acceptez nos termes et conditions</string>

    <string name="action_resto">Restaurants</string>
    <string name="action_boul">Boulangeries</string>
    <string name="action_favory">Favoris</string>
    <string name="action_profil">Compte</string>

</resources>
