<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cuierblan" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="K'mer"
                android:textColor="@color/blue"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Délices"
                android:textColor="@color/orang"
                android:textSize="35dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="67dp"
            android:text="DELICES FOR ALL"
            android:textColor="@color/oran"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="80dp"
        android:background="@drawable/rounder2"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounder">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_connexion"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_toRightOf="@+id/imageView3" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounder">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/imggoogle" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/google_connexion"
                android:textColor="@color/black"
                android:layout_toRightOf="@+id/imageView2" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLogin"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:textColor="#C1FFFFFF"/>


    </LinearLayout>

</LinearLayout>